# arbiter

./: .env.example  .gitignore  Dockerfile  IDEA.md  README.md  STATUS.md  docker-compose.yml  logo-showcase.html  pyproject.toml  requirements.txt  startup.sh  test_optimize.py
.deployment/: build.sh
agent/: advisor.py  gate.py  main.py  monitor.py  optimizer.py  regime.py  scanner.py  strategy.py  strategy_generator.py
arbiter/: __init__.py  _engine.cp311-win_amd64.pyd
config/: settings.py  strategies.yaml  tokens.yaml
dashboard/: demo-record-v2.cjs  demo-record.cjs  package-lock.json  package.json  vite.config.ts
dashboard/screenshots/: arbiter-demo.webm  generate-vo.sh  page@0e73d5e86bdda5ff220bdc0de1cf2eea.webm  page@84cb57e04b7b38b5381caca4df9c43b6.webm  page@fd5d72c8ed57d3788c2371e5a6b0ed1e.webm
dashboard/src/: App.tsx  index.css
data/: db.py  models.py  transforms.py
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/crypto/: config.rs  mod.rs  position.rs  result.rs  runner.rs
engine/src/indicators/: mod.rs  nautilus_wrapper.rs  registry.rs
integrations/: binance.py  bnb_sdk.py  cmc.py  twak.py  twak_executor.py  wallet_manager.py
notifications/: telegram.py
risk/: guardrails.py  portfolio.py  sizing.py
scripts/: manual_backtest.py  register.py
server/: api.py  crud.py  database.py  models.py  ws.py
skills/: arbiter-strategy-optimizer.yaml
tests/: test_advisor.py  test_api.py  test_engine.py  test_gate.py  test_integration.py  test_optimizer.py  test_risk.py  test_scanner.py  test_strategy_gen.py  test_transforms.py
(+37 files in other folders)
