[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "arbiter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]",
    "openai>=1.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "aiogram>=3.0",
    "structlog>=24.0",
]

[tool.maturin]
manifest-path = "engine/Cargo.toml"
module-name = "arbiter._engine"
python-source = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
