[package]
name = "arbiter-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "arbiter__engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ahash = "0.8"
nautilus-indicators = "0.54.0"
nautilus-core = "0.54.0"
nautilus-model = "0.54.0"
